--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+spring.application.username=SpringBoot
+# MySQL properties
+spring.datasource.driver-class-username=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/test?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+
+# Hibernate properties
+#spring.jpa.properties.hibernate.dialect=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+#??? ?????? PATCH DELETE
+spring.mvc.hiddenmethod.filter.enabled=true
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
 
